# mesh-thumbnail

./: Cargo.toml  README.md
.github/workflows/: build.yaml  release.yaml
src/: main.rs  parse_mesh.rs  solid_material.rs  solid_material_shader.frag
