[package]
name = "mesh-thumbnail"
version = "1.2.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
three-d = { git = "https://github.com/suchmememanyskill/three-d", rev = "e74750282c08e3388a770f3ac325a34aab9cb7a0", features = ["headless"] }
stl_io = { version = "0.8" }
three-d-asset = {version = "0.9", features= ["jpeg", "png"] }
threemf = "0.7.0"
zip = { version = "2.2"}
wavefront_obj = { version = "10" }
image = { version = "0.25.6", features = ["jpeg", "png"]}
regex = "1"